Bug 64603 - Multiple overlapping events in agenda view are layed out wrong (overlapping, too wide, different widths, etc.)
Summary: Multiple overlapping events in agenda view are layed out wrong (overlapping, ...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: 5.3.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 102988 124932 125834 (view as bug list)
Depends on:
Blocks:
 
Reported: 2003-09-20 18:13 UTC by Simon Perreault
Modified: 2021-02-11 15:58 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.3
Sentry Crash Report:


Attachments
example (28.89 KB, image/jpeg)
2008-08-21 21:48 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Perreault 2003-09-20 18:13:07 UTC
Version:           3.2 pre (using KDE 3.1.9)
Compiler:          gcc version 3.2.2 20030222 (Red Hat Linux 3.2.2-5)
OS:          Linux (i686) release 2.6.0-test4

Enter these test events in an empty day:

a- 8:00 - 10:00
b- 9:00 - 11:00
c- 10:00 - 12:00
d- 10:00 - 12:00

Look at the results in the 1-day view. You'll see that event a is too large. It gets allocated 1/2 of the space instead of 1/3. Now drag event c one hour later. Event a gets redrawn correctly.
Comment 1 Wilbur Pan 2004-01-28 23:02:19 UTC
Concurrent events also do not display well in multiday views (work week, full week, next x days).
Comment 2 Reinhold Kainhofer 2005-04-01 12:06:56 UTC
*** Bug 102988 has been marked as a duplicate of this bug. ***
Comment 3 Reinhold Kainhofer 2005-04-01 12:07:24 UTC
See also the screenshots that are attached to bug report #102988.

Cheers,
Reinhold
Comment 4 Damir Perisa 2005-04-01 12:26:20 UTC
i found another workaround (in bug 102988 i had a temporarely one): if you make your events start on different time (e.g. shifted for one minute) the display is correct ... however, this means that the golden rule "Content, Navigation, Design. Importance in that order." would be broken, as you have to addapt your content to have a working navigation :-(
Comment 5 Reinhold Kainhofer 2006-11-02 19:33:21 UTC
Reassigning all KOrganizer bug reports and wishes to the newly created 
korganizer-devel mailing list.
Comment 6 Reinhold Kainhofer 2007-01-01 15:50:40 UTC
*** Bug 124932 has been marked as a duplicate of this bug. ***
Comment 7 Reinhold Kainhofer 2007-01-01 16:13:15 UTC
*** Bug 125834 has been marked as a duplicate of this bug. ***
Comment 8 FiNeX 2008-08-21 21:48:39 UTC
Created attachment 26967 [details]
example

Confirmed in 3.5.9 and current trunk ( > 4.1 )
Comment 9 Jaime Torres 2008-11-23 12:57:13 UTC
Still there in KDE 4.1.80 (KDE 4.1.80 (KDE 4.2 Beta1))

Also there are some races in the events a and b to be drawn over the other.
Comment 10 Denis Kurz 2016-09-24 18:45:44 UTC
This bug has only been reported for versions before 4.14, which have been unsupported for at least two years now. Can anyone tell if this bug still present?

If noone confirms this bug for a Framework-based version of korganizer (version 5.0 or later, as part of KDE Applications 15.08 or later), it gets closed in about three months.
Comment 11 Richard Bos 2016-09-25 10:20:48 UTC
Why propose to close this bug?  Perhaps the people in this bug report are not yet running the KDE version you asked for.  On the other hand the example in the attachment is rather clear how to reproduce the problem ( https://bugs.kde.org/show_bug.cgi?id=64603#attach_26967 ).

In case you're running the required KDE version, just schedule 4 events and see for yourself if the problem is fixed or not.
Comment 12 Denis Kurz 2016-09-25 18:50:59 UTC
Richard, trying to reproduce myself if there's a easy description of a way to reproduce it would be the usual approach. However, there is a huge amount of old bugs, and noone knows if they are still valid. I set around 2.600 bugs to NEEDSINFO yesterday. That's because we didn't have any bug triagers in recent years, not to mention other issues like many missing versions of various products in KDE's bugzilla. There's simply no other way to catch up. Even assembling list of all these bugs, and now responding to all the feedback is a huge amount of work. On the other hand, keeping bugs open that can only be reproduced for versions for which support has been dropped more than two years ago (despite the fact that some distros still offer packages) isn't helpful for anyone.

I now reproduced this bug myself using the original description. In addition to the symptoms already described, the events disappeared when the calendar was synchronized. Since that never happened to me before, I deem it related.
Comment 13 Richard Bos 2016-09-25 19:38:44 UTC
Denis you're my hero.  
Thanks for looking into the KDE bug situation and for verying this problem.
Comment 14 Bug Janitor Service 2021-02-07 19:56:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/calendarsupport/-/merge_requests/7
Comment 15 gjditchfield 2021-02-11 15:58:33 UTC
Git commit 34aaaa969bb3613a414fbb8da4930eed4d8a85e3 by Glen Ditchfield.
Committed on 11/02/2021 at 15:58.
Pushed by gditchfield into branch 'release/20.12'.

Find all items that must shift when a new item is placed

When an item is inserted in a cell, items it overlaps must shift over, but
those items might overlap others which must also shift even though they do
not overlap the initial item.  Bug 64603 gives an example.
FIXED-IN: 5.16.3

M  +2    -0    src/autotests/CMakeLists.txt
A  +183  -0    src/autotests/placeitemtest.cpp  *
M  +31   -41   src/cellitem.cpp

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://invent.kde.org/pim/calendarsupport/commit/34aaaa969bb3613a414fbb8da4930eed4d8a85e3