Find all items that must shift when a new item is placed

When an item is inserted in a cell, items it overlaps must shift over, but
those items might overlap others which must also shift even though they do
not overlap the initial item.  Bug 64603 gives an example.

BUG: 64603
FIXED-IN: 5.16.3